init/argocd-deployment-sys/resources/sm.yaml
kind: Service
apiVersion: v1
metadata:
  name: argocd-dex-server-metrics
  labels:
    app.kubernetes.io/instance: argocd-deployment-sys
    app.kubernetes.io/name: argocd-dex-server
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 5558
      targetPort: metrics
  type: ClusterIP
  selector:
    app.kubernetes.io/name: argocd-dex-server
